add Google Analytics
Signed-off-by: Jana Siegle <jsiegle@lightpointdev.com>

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 <!--[if lt IE 11]>
 <link rel="stylesheet" type="text/css" href="http://webnextbd.net/demo/css/ie.css">
 <![endif]-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111366889-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111366889-1');
+</script>
 
 </head>
 <body class="image-background">
